[tool.poetry]
name = "heaven-cash"
version = "0.0.1"
description = "Finance technology revolution"
authors = ["Kirill Petryashev <petryashev.k@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <=3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
SQLAlchemy = "^2.0.23"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "*_unittests.py"
marks = [
	"excluded: tests that aren't running automatically via GitHub actions"
]
